--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,16 +129,17 @@ jobs:
     - name: checkout PR 
       uses: actions/checkout@v5
     - name: run hadolint on operator dockerfile
-      uses: hadolint/hadolint-action@v3.3.0
+      # using commit sha of the hadolint-action to preserve immutability
+      uses: hadolint/hadolint-action@2332a7b74a6de0dda2e2221d575162eba76ba5e5
       with:
         dockerfile: Dockerfile
     - name: run hadolint on config daemon dockerfile
-      uses: hadolint/hadolint-action@v3.3.0
+      uses: hadolint/hadolint-action@2332a7b74a6de0dda2e2221d575162eba76ba5e5
       with:
         dockerfile: Dockerfile.sriov-network-config-daemon
         ignore: DL3033
     - name: run hadolint on webhook dockerfile
-      uses: hadolint/hadolint-action@v3.3.0
+      uses: hadolint/hadolint-action@2332a7b74a6de0dda2e2221d575162eba76ba5e5
       with:
         dockerfile: Dockerfile.webhook
   test-coverage:
