--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,6 +87,12 @@ jobs:
     name: check manifests
     runs-on: ubuntu-24.04
     steps:
+
+    - name: Set up Go 1.25
+      uses: actions/setup-go@v6
+      with:
+        go-version: 1.25.x
+
     - name: Check out code
       uses: actions/checkout@v6
 
